Fix alignment of body name in body-details

--- a/src/app/body-details/body-details.component.css
+++ b/src/app/body-details/body-details.component.css
@@ -32,13 +32,14 @@
 
 .action-buttons {
     margin-left: auto;
-    margin-top: -4px;
+    margin-top: -10px;
 }
 
 .body-name {
     font-weight: bold;
     font-size: 14pt;
-    margin-top: 5px;
+    margin-top: 0px;
+    margin-bottom: 10px;
 }
 
 .description {
